<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="84dp"
        android:fillViewport="true"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/entry_subheader"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/entry_intensity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_subheader" />

            <TextView
                android:id="@+id/intensity_label_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="0"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_intensity" />

            <TextView
                android:id="@+id/intensity_label_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="10"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_intensity" />

            <TextView
                android:id="@+id/intensity_label_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/intensity_label_10"
                app:layout_constraintStart_toEndOf="@+id/intensity_label_0"
                app:layout_constraintTop_toBottomOf="@+id/text_intensity" />

            <SeekBar
                android:id="@+id/seekBar_intensity"
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="8dp"
                android:max="10"
                android:min="0"
                android:progress="5"
                app:layout_constraintTop_toBottomOf="@+id/intensity_label_0"
                tools:layout_editor_absoluteX="-38dp" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/entry_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar_intensity" />

            <RadioGroup
                android:id="@+id/radioGroup_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/grey"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_location">

                <RadioButton
                    android:id="@+id/radio_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="back"
                    android:text="back" />

                <RadioButton
                    android:id="@+id/radio_neck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="neck"
                    android:text="neck" />

                <RadioButton
                    android:id="@+id/radio_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="head"
                    android:text="head" />

                <RadioButton
                    android:id="@+id/radio_knees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="knees"
                    android:text="knees" />

                <RadioButton
                    android:id="@+id/radio_hips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="hips"
                    android:text="hips" />

                <RadioButton
                    android:id="@+id/radio_abdomen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="abdomen"
                    android:text="abdomen" />

                <RadioButton
                    android:id="@+id/radio_elbows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="elbows"
                    android:text="elbows" />

                <RadioButton
                    android:id="@+id/radio_shoulders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="shoulders"
                    android:text="shoulders" />

                <RadioButton
                    android:id="@+id/radio_shins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="shins"
                    android:text="shins" />

                <RadioButton
                    android:id="@+id/radio_jaw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="jaw"
                    android:text="jaw" />

                <RadioButton
                    android:id="@+id/radio_facial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="facial"
                    android:text="facial" />

            </RadioGroup>


            <TextView
                android:id="@+id/text_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/entry_mood"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup_location" />

            <RadioGroup
                android:id="@+id/radioGroup_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_mood">

                <RadioButton
                    android:id="@+id/radio_very_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:button="@drawable/ic_baseline_mood_bad_24"
                    android:contentDescription="very low"
                    android:padding="4dp"
                    android:text="very low" />

                <RadioButton
                    android:id="@+id/radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:button="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
                    android:contentDescription="low"
                    android:padding="4dp"
                    android:text="low" />

                <RadioButton
                    android:id="@+id/radio_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:button="@drawable/ic_baseline_sentiment_dissatisfied_24"
                    android:contentDescription="average"
                    android:padding="4dp"
                    android:text="average" />

                <RadioButton
                    android:id="@+id/radio_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:button="@drawable/ic_baseline_sentiment_satisfied_24"
                    android:contentDescription="good"
                    android:padding="4dp"
                    android:text="good" />

                <RadioButton
                    android:id="@+id/radio_very_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:button="@drawable/ic_baseline_mood_24"
                    android:contentDescription="very good"
                    android:padding="4dp"
                    android:text="very good" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_steps_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/entry_steps_goal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup_mood" />

            <EditText
                android:id="@+id/editTextNumber_steps_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="number"
                android:text="10000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_steps_goal" />

            <TextView
                android:id="@+id/text_steps_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/entry_steps_actual"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_steps_goal" />

            <EditText
                android:id="@+id/editTextNumber_steps_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_steps_actual" />

            <Space
                android:id="@+id/bottom_space"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_steps_actual" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/entry_button_save"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/middle_divider"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save_disabled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/entry_button_save"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/middle_divider"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/entry_button_edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle_divider" />

    <Button
        android:id="@+id/button_edit_disabled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/entry_button_edit"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle_divider" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

